fix: issue where workflow template headers and content were not aligned

--- a/src/app/workflow-template/workflow-template.component.scss
+++ b/src/app/workflow-template/workflow-template.component.scss
@@ -1,9 +1,7 @@
 .workflow-list {
 }
 
-.cdk-header-cell {
-  flex-grow: 1;
-}
+
 
 .cdk-column-name {
   flex-basis: 300px;
@@ -15,6 +13,7 @@
 
 .cdk-column-status {
   min-width: 400px;
+  margin-right: 40px;
 
   app-workflow-template-status {
     display: block;
@@ -52,7 +51,7 @@
 }
 
 .cdk-column-lastExecuted {
-  flex-basis: 150px;
+  flex-basis: 200px;
 }
 
 .cdk-column-labels {
